deploy/istio/policies/strict-mtls.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: meshops
spec:
  mtls:
    mode: STRICT
